--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   padding: 0;
   margin: 0;
   /* font-family: 'Sanchez', serif; */
-  font-family: 'Playfair Display', serif; */
+  font-family: 'Playfair Display', serif; 
   /* font-family: 'Cinzel', serif;  */
   /* font-family: 'Cormorant Garamond', serif; */
   background-color: rgb(255, 247, 230);
@@ -39,6 +39,7 @@ body {
   font-weight: bold;
   text-decoration: underline;
   margin-top: 40px;
+  margin-bottom: 0px;
 }
 
 .ingredients-div {
