--- a/style.css
+++ b/style.css
@@ -12,6 +12,29 @@ body {
   text-transform: uppercase;
 }
 
+.buttons {
+  display: flex;
+}
+
+.search-box {
+  width: 200px;
+  font-size: 16px;
+  font-family: Arial;
+}
+
+.search-button, .random-button {
+  border: 1px solid rgb(82, 82, 82);
+  background-color: rgb(255, 247, 230);
+  color: rgb(82, 82, 82);
+  cursor: pointer;
+  border-radius: 3px;
+  margin: 5px;
+  max-width: 80px;
+  font-family: Arial;
+  text-align: center;
+  padding: 5px;
+}
+
 .modal {
   display: flex;
   /* align-items: center; */
@@ -69,6 +92,10 @@ body {
   border-radius: 5px;
   border: 10px solid white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.meal-instructions {
+  margin-bottom: 30px;
 }
 
 /* .show-modal {
